--- a/awax/assets/css/style.css
+++ b/awax/assets/css/style.css
@@ -61,10 +61,16 @@ header {
     border-bottom: 5px solid #000;
 }
 
-.menu li a:hover {
-    border-bottom: 5px solid #B28756;
-}
-
+.menu li a:hover,
 .menu .active a {
     border-bottom: 5px solid #B28756;
+    color: #ccc;
+}
+
+.banner {
+    height: calc(100vh - 100px);
+    background-color: #333;
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    background-position: bottom;
 }
